@@ -35,6 +35,9 @@
       the user level functions \code{.traceback()} and \code{traceback()},
       fulfilling the wish of \PR{17580}, reported (incl. patch proposal)
       by Brodie Gaslam.
+
+      \item \code{data.matrix()} now converts character columns to
+      factors and from this to integers.
     }
   }
 
